force-app/main/default/objects/Situacao_Financeira__c/Situacao_Financeira__c.object-meta.xml
<CustomObject>
    <label>Situação Financeira</label>
    <nameField>
        <displayFormat>SF-{0000000000}</displayFormat>
        <label>Nome de Situação Financeira</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Situação Financeira</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>