force-app/main/default/objects/Situacao_Financeira__c/fields/Acao_judicial__c.field-meta.xml
<CustomField>
    <fullName>Acao_judicial__c</fullName>
    <label>Ação judicial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>