force-app/main/default/objects/Situacao_Financeira__c/fields/Data_do_ultimo_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_ultimo_pagamento__c</fullName>
    <label>Data do último pagamento</label>
    <type>Date</type>
</CustomField>