force-app/main/default/objects/Situacao_Financeira__c/fields/Dia_de_vencimento_do_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_vencimento_do_pagamento__c</fullName>
    <label>Dia de vencimento do pagamento</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>