force-app/main/default/objects/Situacao_Financeira__c/fields/Dias_em_atraso_divida__c.field-meta.xml
<CustomField>
    <fullName>Dias_em_atraso_divida__c</fullName>
    <label>Dias em atraso dívida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>