force-app/main/default/objects/Situacao_Financeira__c/fields/Divida__c.field-meta.xml
<CustomField>
    <fullName>Divida__c</fullName>
    <label>Dívida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>