force-app/main/default/objects/Situacao_Financeira__c/fields/Experiencia_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>Experiencia_do_cliente__c</fullName>
    <label>Experiência do cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>