force-app/main/default/objects/Situacao_Financeira__c/fields/Faturamento_medio_trimestral__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_medio_trimestral__c</fullName>
    <description>Faturamento médio trimestral do cliente</description>
    <label>Faturamento médio trimestral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>