force-app/main/default/objects/Situacao_Financeira__c/fields/Faturamento_mensal__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_mensal__c</fullName>
    <label>Faturamento mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>