force-app/main/default/objects/Situacao_Financeira__c/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <label>Forma de pagamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>