force-app/main/default/objects/Situacao_Financeira__c/fields/Maior_atraso__c.field-meta.xml
<CustomField>
    <fullName>Maior_atraso__c</fullName>
    <label>Maior atraso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>