force-app/main/default/objects/Situacao_Financeira__c/fields/Pendente_reinstalacao__c.field-meta.xml
<CustomField>
    <fullName>Pendente_reinstalacao__c</fullName>
    <label>Pendente reinstalação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>