force-app/main/default/objects/Situacao_Financeira__c/fields/Pre_rescisao__c.field-meta.xml
<CustomField>
    <fullName>Pre_rescisao__c</fullName>
    <label>Pré rescisão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>