force-app/main/default/objects/Situacao_Financeira__c/fields/Recisao_por_inadimplencia__c.field-meta.xml
<CustomField>
    <fullName>Recisao_por_inadimplencia__c</fullName>
    <label>Recisão por inadimplência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>