force-app/main/default/objects/Situacao_Financeira__c/fields/Recisao_total__c.field-meta.xml
<CustomField>
    <fullName>Recisao_total__c</fullName>
    <label>Recisão total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>