force-app/main/default/objects/Situacao_Financeira__c/fields/Rentabilidade_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidade_Mensal__c</fullName>
    <label>Rentabilidade Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>