force-app/main/default/objects/Situacao_Financeira__c/fields/Rentabilidade_YTD__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidade_YTD__c</fullName>
    <inlineHelpText>Rentabilidade Year to Date</inlineHelpText>
    <label>Rentabilidade YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>