force-app/main/default/objects/Situacao_Financeira__c/fields/Roubado_e_recuperado__c.field-meta.xml
<CustomField>
    <fullName>Roubado_e_recuperado__c</fullName>
    <label>Roubado e recuperado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>