force-app/main/default/objects/Situacao_Financeira__c/fields/Situacao_Financeira__c.field-meta.xml
<CustomField>
    <fullName>Situacao_Financeira__c</fullName>
    <label>Situação Financeira</label>
    <length>100</length>
    <type>Text</type>
</CustomField>