force-app/main/default/objects/Situacao_Financeira__c/fields/Situacao_sinal__c.field-meta.xml
<CustomField>
    <fullName>Situacao_sinal__c</fullName>
    <label>Situação do sinal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>