force-app/main/default/objects/Situacao_Financeira__c/fields/Stop_de_faturamento__c.field-meta.xml
<CustomField>
    <fullName>Stop_de_faturamento__c</fullName>
    <label>Stop de faturamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>