force-app/main/default/objects/Situacao_Financeira__c/fields/Tempo_medio_de_atraso__c.field-meta.xml
<CustomField>
    <fullName>Tempo_medio_de_atraso__c</fullName>
    <label>Tempo médio de atraso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>