force-app/main/default/objects/Situacao_Financeira__c/fields/Termos_ativos__c.field-meta.xml
<CustomField>
    <fullName>Termos_ativos__c</fullName>
    <label>Termos ativos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>