force-app/main/default/objects/Situacao_Financeira__c/fields/Ticket_medio_recorrente__c.field-meta.xml
<CustomField>
    <fullName>Ticket_medio_recorrente__c</fullName>
    <label>Ticket médio recorrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>