force-app/main/default/objects/Situacao_Financeira__c/fields/Valor_proximo_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Valor_proximo_pagamento__c</fullName>
    <label>Valor próximo pagamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>